--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mineversal.githubuser">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,25 +10,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GithubUser">
         <activity
-            android:name=".ui.SettingActivity"
+            android:name=".MainActivity"
             android:exported="true" />
         <activity
-            android:name=".ui.FavoriteActivity"
+            android:name=".UserDetailsActivity"
             android:exported="true" />
         <activity
-            android:name=".ui.UserDetailApiActivity"
-            android:exported="true" />
-        <activity
-            android:name=".ui.SearchActivity"
-            android:exported="true" />
-        <activity
-            android:name=".ui.MainActivity"
-            android:exported="true" />
-        <activity
-            android:name=".ui.UserDetailsActivity"
-            android:exported="true" />
-        <activity
-            android:name=".ui.SplashScreenActivity"
+            android:name=".SplashScreenActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
