--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,19 +2,18 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-parcelize'
-    id 'kotlin-kapt'
 }
 
 android {
     compileSdk 31
 
     defaultConfig {
-        buildConfigField("String", 'KEY', "\"Authorization: token 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\"")
         applicationId "com.mineversal.githubuser"
         minSdk 21
         targetSdk 31
         versionCode 1
         versionName "1.0"
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -24,54 +23,27 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
     kotlinOptions {
         jvmTarget = '1.8'
-    }
-    
-    buildFeatures {
-        viewBinding true
     }
 }
 
 dependencies {
+
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-    implementation "androidx.viewpager2:viewpager2:1.0.0"
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
-    implementation "androidx.activity:activity-ktx:1.3.1"
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
-    implementation 'androidx.room:room-runtime:2.3.0'
-    implementation "androidx.datastore:datastore-preferences:1.0.0"
-
-    implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2"
-    implementation "androidx.fragment:fragment-ktx:1.3.6"
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
-    implementation 'com.google.code.gson:gson:2.8.8'
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
-
-    kapt 'androidx.room:room-compiler:2.3.0'
-
-    testImplementation 'junit:junit:4.13.2'
-
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
-    implementation "androidx.room:room-ktx:2.3.0"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
-    annotationProcessor "androidx.room:room-compiler:2.3.0"
-    androidTestImplementation "androidx.room:room-testing:2.3.0"
 }
