Summary Submission Akhir

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GithubUser">
         <activity
-            android:name=".ui.UserDetailApiActivity"
+            android:name=".ui.SettingActivity"
             android:exported="true" />
         <activity
-            android:name=".ui.DetailUsersActivity"
+            android:name=".ui.FavoriteActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.UserDetailApiActivity"
             android:exported="true" />
         <activity
             android:name=".ui.SearchActivity"
